--- a/css/custom.css
+++ b/css/custom.css
@@ -257,6 +257,17 @@ h3.huge {
 .highlight.huge {
 	font-size: 1.5em;
 }
+.highlight.medium {
+    font-size: 1.2em;
+}
+ul.quotes {
+    list-style: upper-roman;
+    font-size: 0.8em;
+    color: #ccc;
+}
+ul.quotes li {
+    word-break: break-word;
+}
 .readMore {
 	position: absolute;
     width: 100%;
