--- a/css/custom.css
+++ b/css/custom.css
@@ -194,7 +194,7 @@ circle:hover {
         overflow: scroll;
     }
 }
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) {
     .cover { min-height: auto;}
     .step {
         margin: 2.5rem 0;
@@ -277,7 +277,7 @@ ul.quotes li {
     width: 100%;
     background: aliceblue;
     height: 100%;
-    padding: 1rem 2rem;
+    padding: 1rem;
     z-index: 1;
     overflow: scroll;
 }
